# TA64

./: Architecture.md  CMakeLists.txt  README.md  build.sh
assembler/: CMakeLists.txt
assembler/src/: ta_asm.cpp
compiler/: CMakeLists.txt
compiler/src/: ta_gcc.cpp
docs/: ARCHITECTURE.md
emulator/: CMakeLists.txt
emulator/src/: main.cpp
examples/: arithmetic.asm  counter.c  example.c  hello.asm  sort_demo.asm
include/: cpu.hpp  loader.hpp  memory.hpp  ta64_isa.hpp
kernel/: kernel.asm
linker/: CMakeLists.txt
linker/src/: ta_ld.cpp
tests/: run_tests.sh
tools/: CMakeLists.txt
tools/src/: ta_dasm.cpp  ta_monitor.cpp  ta_objdump.cpp
